--- a/hugo.toml
+++ b/hugo.toml
@@ -1,3 +1,3 @@
-baseURL = 'https://example.org/'
+baseURL = 'https://wamansou.github.io/waelmansour.github.io/'
 languageCode = 'en-us'
-title = 'My New Hugo Site'
+title = 'My CV'
