--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,4 +1,4 @@
-baseURL: "https://hugo-profile.netlify.app"
+baseURL: "https://wamansou.github.io/"
 languageCode: "en-us"
 title: "Hugo Profile"
 theme: hugo-profile
